--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.3.0
 attrs==19.3.0
+coverage==4.5.4
 importlib-metadata==0.23
 more-itertools==7.2.0
 packaging==19.2
@@ -9,6 +10,7 @@ PTable==0.9.2
 py==1.8.0
 pyparsing==2.4.4
 pytest==5.2.2
+pytest-cov==2.8.1
 python-cypher==0.17.0
 redis==3.3.11
 redisgraph==1.7
