--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.sources=./src/irida
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.xunit.reportPath=test_report.xml
